<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:textColor="#BE06E3"
        android:text="@string/namaku"
        android:fontFamily="serif-monospace"
        android:id="@+id/namaku"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/modul11"
        android:id="@+id/btn1"
        android:textStyle="bold"
        android:onClick="Modulsatusatu"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/modul12"
        android:id="@+id/btn2"
        android:textStyle="bold"
        android:onClick="Modulsatudua"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/modul2"
        android:id="@+id/btn3"
        android:textStyle="bold"
        android:onClick="Moduldua"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/modul3"
        android:id="@+id/btn4"
        android:textStyle="bold"
        android:onClick="Modultiga"/>

    <Button
        android:id="@+id/btn5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/modul4"
        android:textStyle="bold"
        android:onClick="Modulempat"/>

    <Button
        android:id="@+id/btn6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/modul5"
        android:textStyle="bold"
        android:onClick="ModulLima"/>

</LinearLayout>