<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    tools:context=".modul1nomor1"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/inputnama"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#060F8C"
        android:id="@+id/nama"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/inputNama"
        android:inputType="text"
        android:hint="@string/hintnama"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/simpan"
        android:id="@+id/simpan"
        android:onClick="Simpan"/>

    <TextView
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:id="@+id/hasil"/>

</LinearLayout>