<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".pembayaran">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/RL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_pemesan"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/LihatNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Nama"
                    android:text="@string/nama"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/RL1">

                <TextView
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RL2">

                <TextView
                    android:id="@+id/txt_kopi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_menu1"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/harga_kopi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/rp1"
                    android:text="@string/hrg_menu1"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/x1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/x"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/jmlh_kopi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/jmlh_menu1"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sd1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sd"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_kopi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi1"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_menu1"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/RL3">

                <TextView
                    android:id="@+id/txt_kopi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_menu2"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/harga_kopi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/rp3"
                    android:text="@string/hrg_menu2"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/x2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/x"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/jmlh_kopi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/jmlh_menu2"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sd2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sd"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_kopi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi2"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_menu2"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RL4">

                <TextView
                    android:id="@+id/txt_kopi3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_menu3"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/harga_kopi3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/rp5"
                    android:text="@string/hrg_menu3"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/x3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/x"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/jmlh_kopi3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/jmlh_menu3"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sd3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sd"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_kopi3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_kopi3"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_menu3"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RL5">

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/total"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/rp7"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RL7"
                android:layout_below="@id/RL6">
                <TextView
                    android:id="@+id/bayar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bayar"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/bayar_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RL8"
                android:layout_below="@+id/RL7">
                <TextView
                    android:id="@+id/kembalian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kembalian"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rp9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="220dp"
                    android:text="@string/rp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/kembalian_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/rp9"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RL9"
                android:layout_below="@+id/RL8">
                <Button
                    android:id="@+id/btn_bayar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="270dp"
                    android:onClick="bayar"
                    android:text="@string/bayarin" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>