<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul4">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:layout_below="@+id/login"
        android:textColor="#000" />

    <EditText
        android:id="@+id/isiuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_below="@+id/isiuser"
        android:layout_marginTop="15dp"
        android:textColor="#000" />

    <EditText
        android:id="@+id/isipass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="250dp"
        android:textStyle="bold"
        android:layout_below="@+id/isipass"
        android:onClick="login"/>

</RelativeLayout>